apps/kutt/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kutt
  labels:
    app: kutt
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kutt
  template:
    metadata:
      labels:
        app: kutt
    spec:
      containers:
        - name: kutt
          image: kutt/kutt:v3.2.6
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: "1"
              memory: 1Gi
          startupProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 24
          readinessProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 30
            timeoutSeconds: 3
            failureThreshold: 3
