apps/kutt/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kutt
spec:
  type: ClusterIP
  selector:
    app: kutt
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: http
