apps/kutt/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
    name: kutt-route
spec:
    parentRefs:
        - name: gatewayapi
          namespace: traefik
          sectionName: https
    hostnames:
        - ENC[AES256_GCM,data:7deRZ1X71/alQZc=,iv:pQrDX7PkunuOfO0fQQ8QY03PEOlZtdXxeWFmb7/GDVk=,tag:/D4yijpROa1UdAB1R9bFUw==,type:str]
    rules:
        - matches:
            - path:
                type: PathPrefix
                value: /
          filters:
            - type: ExtensionRef
              extensionRef:
                group: traefik.io
                kind: Middleware
                name: default-headers
          backendRefs:
            - name: kutt
              port: 3000
sops:
    age:
        - enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBKcERaMkg3WWpDdUFWS3J6
[...]
            dV/K08eaxGbz2afOhcYZdhiH7wmOeZve38Q/XA8FhoyQBWtlO82IkQ==
            -----END AGE ENCRYPTED FILE-----
          recipient: age149cx2m4rwfw6argx9fam62vjtcjgeuepd78ej8f0mcpatdgxdqfslqu454
    encrypted_regex: ^(hostnames)$
    lastmodified: "2026-08-27T10:58:25Z"
    mac: ENC[AES256_GCM,data:7wJLHgWzEheTzfwGnmZIn5POiwMkZDW7MhcAxnfCf0oMfen9yu9j9WQefx6W+9qpez8ekso7x9qHFbG1uOtfzC5nr8XyalHu2xU+NajLIIWlDkbn6DvEIF1XnIxKuqTmde5ERc1ez4lAl7cHCeiFoAF2f4e1wFf2ZazjACHQB/E=,iv:9FwhqfXeRuiSnl0nbamXF5947cdWiqosmXvN72hUID0=,tag:BTErWwyFpqwgFkSKlzOZkA==,type:str]
    version: 3.13.3
